--- a/.gitattributes
+++ b/.gitattributes
@@ -10,9 +10,9 @@ lib/** linguist-language=Dart
 test/** linguist-language=Dart
 *.dart linguist-language=Dart
 *.yaml linguist-language=Dart
-
+windows/runner/CMakeLists.txt linguist-language=Dart
 # Optionally include CMake, Swift, HTML only if needed:
-windows/runner/CMakeLists.txt linguist-language=CMake
+
 *.cmake linguist-language=CMake
 
 ios/Runner/** linguist-language=Swift
